--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 :root {
-  --footer-icon: url(../images/flower.png);
+  --footer-icon: url(/images/flower.png);
   --top-icon: url(../images/flower.png);
   --sponsor-icon: url(../images/flower.png);
-  --cursor-default: url(../images/cursor/cursor-default.png), auto;
-  --cursor-pointer: url(../images/cursor/cursor-pointer.png), pointer;
-  --cursor-text: url(../images/cursor/cursor-text.png), text;
+  --cursor-default: url(/images/cursor/cursor-default.png), auto;
+  --cursor-pointer: url(/images/cursor/cursor-pointer.png), pointer;
+  --cursor-text: url(/images/cursor/cursor-text.png), text;
 }
 
 :root {
