--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -1,5 +1,5 @@
 <video controls width="{{ .Get "width" | default "640" }}">
-  <source src="/videos/{{ .Get "src" }}" type="video/mp4">
-  <source src="/videos/{{ .Get "src" }}" type="video/avi">
+  <source src="/blog/videos/{{ .Get "src" }}" type="video/mp4">
+  <source src="/blog/videos/{{ .Get "src" }}" type="video/avi">
   您的浏览器不支持 video 标签。
 </video>
